# shadow-detection

./: .gitignore  LICENSE  README.md  run.ps1  run.sh  submission_example.csv
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/app/: features.py  inference.py  main.py  schemas.py
backend/tests/: test_schemas.py
frontend/: next.config.js  package-lock.json  package.json
frontend/app/: globals.css  layout.js  page.js  page.module.css
frontend/components/: ImageUploader.js  ImageUploader.module.css  PredictionStats.js  PredictionStats.module.css  PredictionViewer.js  PredictionViewer.module.css
frontend/public/samples/: samples.json
training/: README.md  pyproject.toml  setup.ps1  setup.sh
training/configs/: config.yaml
training/configs/data/: default.yaml
training/configs/model/: resnet50.yaml
training/configs/training/: default.yaml
training/scripts/: build_samples.py  export_model.py  train.py
training/src/shadow_detection/: __init__.py  data.py  dataset.py  features.py  gpu.py  losses.py  metrics.py  model.py  runtime.py
training/tests/: conftest.py  test_feature_parity.py  test_features.py  test_flip_parity.py  test_targets.py
