[project]
name = "shadow-detector-api"
version = "0.1.0"
description = "FastAPI inference server for the shadow detection model"
requires-python = ">=3.10,<3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pillow>=10.0.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "python-multipart>=0.0.20",
    "torch==2.6.0",
    "torchvision==0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# Inference runs on CPU by default; the same model file works on GPU too if
# torch.cuda.is_available(). For deployment on machines without an NVIDIA GPU,
# the CPU wheels are sufficient.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }
